Fix alignment issues

--- a/werkoot_web/static/css/custom.css
+++ b/werkoot_web/static/css/custom.css
@@ -3,12 +3,12 @@
 } */
 
 #page-container{
-  width: 100vw;
   position: relative;
   min-height: 100vh;
 }
 
 #page-content{
+  width: 100vw;
   padding-bottom: 125px;
 }
 
@@ -19,7 +19,7 @@ footer{
 }
 
 .talesCard {
-    height: 150px;
+    height: 200px;
     width: 100%;
 }
 
@@ -480,4 +480,21 @@ h3 {
 
 .shadow {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.27)
+}
+
+@media (min-width: 576px) { 
+  .card-columns {
+        column-count: 2;
+      }
+}
+
+@media (min-width: 768px) { 
+  .card-columns {
+        column-count: 3;
+      }
+}
+@media (min-width: 992px) { 
+  .card-columns {
+        column-count: 4;
+      }
 }
